--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GesAct">
-        <activity android:name=".activities.Dashboard"></activity>
+        <activity android:name=".activities.StudentSelected"></activity>
+        <activity android:name=".activities.Dashboard" />
         <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
